--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -19,6 +19,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install black==22.3.0
+          pip install mypy==0.910
+          pip install pytest==6.2.4
       - name: Check PEP8 compliance
         run: |
           black --check --verbose src
