--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -20,14 +20,11 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
           pip install black==22.3.0
-          pip install mypy==0.910
           pip install pytest==6.2.4
+          pip install pytest-cov==2.12.1
       - name: Check PEP8 compliance
         run: |
           black --check --verbose src
-      - name: Lint with mypy
-        run: |
-          mypy src
       - name: Unit Integration tests with pytest
         run: |
           pytest --cov=src
