--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ numpy==1.23.4
 fastapi==0.88.0
 pydantic==1.10.4
 requests==2.28.1
-uvicorn==0.20.0
+uvicorn[standard]==0.20.0
 argparse==1.1
 scikit-learn==1.1.2
+starlette-exporter==0.10.0
